Whitespace fix on top of page

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 html, body {
   font-size: 16px;
   font-family: 'Lato', sans-serif;
+  background: url(images/bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 /* Navbar */
 .navbar {
@@ -115,6 +120,7 @@ nav a {
   padding-top: 25rem;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
   letter-spacing: 4px;
+  margin-top: 0;
 }
 
 .hero p {
@@ -400,6 +406,7 @@ nav a {
 }
 
 .process-row {
+  width: 100%;
   margin-bottom: 3.125rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -412,11 +419,9 @@ nav a {
 }
 
 .process-row-wrapper {
+  display: flex;
+  align-items: center;
   padding: 1rem;
-}
-
-.process-row img {
-  max-width: 100%;
 }
 
 .process-content-box {
@@ -427,6 +432,15 @@ nav a {
 .process-content-box.middle {
   padding-left: 2.5rem;
   padding-right: 3rem;
+}
+
+.process-image-div {
+  width: 100%;
+}
+
+.process-row img {
+  width: 100%;
+  height: 100%;
 }
 
 .soft-heading {
@@ -571,6 +585,7 @@ nav a {
 .team-row {
   display: block;
   margin: 1.5rem 0;
+  padding: 0 4rem;
 }
 
 .team-row a {
